--- a/Index.css
+++ b/Index.css
@@ -62,7 +62,13 @@ header, #login{
 footer{
     width: 100%;
     height: 82px;
-    flex-shrink: 0;
     background: #D9D9D9;
-    margin-top: auto;
+}
+
+#info{
+    float:left;
+}
+
+#rrss{
+    float:right;
 }
