--- a/area-personal.css
+++ b/area-personal.css
@@ -1,3 +1,30 @@
-.title-right img {
-    height: 25px;
+#datos-perfil p {
+    font-size: 20px;
+}
+
+.post-title {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.post-details {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+@media (max-width: 620px) {
+    #datos-perfil p {
+        font-size: 14px;
+    }
+
+    .post-title {
+        display: inline-block;
+    }
+
+    .post-details {
+        justify-content: space-between;
+    }
 }
